--- a/src/main/webapp/assets/css/blocks.css
+++ b/src/main/webapp/assets/css/blocks.css
@@ -275,7 +275,7 @@
 }
 .breadcrumb li.active,
 .breadcrumb li a:hover {
-  color: #72c02c;
+  color: #CD5C5C;
   text-decoration: none;
 }
 
@@ -566,7 +566,7 @@
 }
 
 .block-grid-v1:hover {
-  border-color: #72c02c;
+  border-color: #CD5C5C;
 }
 
 .block-grid-v1 img {
@@ -652,7 +652,7 @@
 }
 
 .block-grid-v2 li:hover .block-grid-v2-info {
-  border-color: #72c02c;
+  border-color: #CD5C5C;
 }
 
 .block-grid-v2-info h3 {
@@ -690,7 +690,7 @@
   bottom: -15px;
   position: absolute;
   margin-left: -25px;
-  background: #72c02c;
+  background: #CD5C5C;
 }
 
 .service-box-v1 ul {
@@ -701,11 +701,11 @@
   margin: 8px 0;
   font-size: 15px;
   padding-top: 8px;
-  border-top: dotted 1px #72c02c;
+  border-top: dotted 1px #CD5C5C;
 }
 
 .service-box-v1 li:hover {
-  color: #72c02c;
+  color: #CD5C5C;
 }
 
 .service-box-v1 li:first-child {
@@ -737,7 +737,7 @@
   margin-left: -30px;
   text-align: center;
   position: absolute;
-  background: #72c02c;
+  background: #CD5C5C;
   display: inline-block;
 }
 
@@ -868,7 +868,7 @@
 }
 
 .service-block-v4 .service-desc i {
-  color: #72c02c;
+  color: #CD5C5C;
   display: block;
   font-size: 30px;
   margin-bottom: 20px;
@@ -958,7 +958,7 @@
   line-height: 46px;
   text-align: center;
   position: absolute;
-  background: #72c02c;
+  background: #CD5C5C;
   margin-left: -22.5px;
   display: inline-block;
 }
@@ -1000,7 +1000,7 @@
   width: 30px;
   content: " ";
   position: absolute;
-  background: #72c02c;
+  background: #CD5C5C;
 }
 
 /*Colored Content Boxes
@@ -1038,7 +1038,7 @@
 }
 
 .service-block-u {
-	background: #72c02c;
+	background: #CD5C5C;
 }
 .service-block-blue {
 	background: #3498db;
@@ -1102,7 +1102,7 @@
 }
 
 .funny-boxes p a {
-	color: #72c02c;
+	color: #CD5C5C;
 }
 
 .funny-boxes .funny-boxes-img li {
@@ -1111,7 +1111,7 @@
 }
 
 .funny-boxes .funny-boxes-img li i {
-	color: #72c02c;
+	color: #CD5C5C;
 	font-size: 12px;
 	margin-right: 5px;
 }
@@ -1220,7 +1220,7 @@
 
 /*Green Left Bordered Funny Box**/
 .funny-boxes-left-green {
-	border-left: solid 2px #72c02c;
+	border-left: solid 2px #CD5C5C;
 }
 
 .funny-boxes-left-green:hover {
@@ -1260,7 +1260,7 @@
   height: 30px;
   position: relative;
   text-align: center;
-  background: #72c02c;
+  background: #CD5C5C;
   margin-bottom: 15px;
   display: inline-block;
   border: solid 9px #fff;
@@ -1425,7 +1425,7 @@
 
 .team-v1 li:hover > p:before {
   width: 100%;
-  background: #72c02c;
+  background: #CD5C5C;
 }
 
 /*Team v2
@@ -1639,7 +1639,7 @@
 }
 
 .team-v4 .team-social-v4 a:hover {
-  color: #72c02c;
+  color: #CD5C5C;
   text-decoration: none;
 }
 
@@ -1659,7 +1659,7 @@
 
 .team-v5 small {
   display: block;
-  color: #72c02c;
+  color: #CD5C5C;
   font-size: 13px;
   font-style: italic;
   position: relative;
@@ -1761,7 +1761,7 @@
 
 .team-v6 small {
   display: block;
-  color: #72c02c;
+  color: #CD5C5C;
   font-size: 13px;
   margin-bottom: 15px;
 }
@@ -1782,7 +1782,7 @@
 
 .team-v7 .team-v7-position {
   display: block;
-  color: #72c02c;
+  color: #CD5C5C;
   font-style: normal;
   margin-bottom: 15px;
 }
@@ -1997,7 +1997,7 @@
   left: 50%;
   z-index: 1;
   color: #fff;
-	background: #72c02c;
+	background: #CD5C5C;
 	font-size: 20px;
 	text-align: center;
 	line-height: 53px;
@@ -2028,7 +2028,7 @@
 }
 
 .portfolio-box small.project-tag a:hover {
-  color: #72c02c;
+  color: #CD5C5C;
 }
 
 /*--------------------------------------------------
@@ -2204,7 +2204,7 @@
 }
 
 .portfolio-box-v2 .portfolio-box-v2-in i:hover {
-	background: #72c02c;
+	background: #CD5C5C;
 }
 
 /*--------------------------------------------------
@@ -6610,7 +6610,7 @@ a.thumbnail {
 	color: #fff;
 	padding: 1px 6px;
 	position: absolute;
-	background: #72c02c;
+	background: #CD5C5C;
 	display: inline-block;
 }
 .thumbnail-style a.btn-more:hover {
