--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -45,7 +45,7 @@ label {
 }
 
 a {
- color: #72c02c;
+ color: #CD5C5C;
  text-decoration: none;
 }
 
@@ -62,7 +62,7 @@ a:focus {
 text-decoration: none;
 }
 a:hover {
- color: #72c02c;
+ color: #CD5C5C;
  text-decoration: underline;
 }
 
