--- a/src/main/webapp/lib/css/estilo.css
+++ b/src/main/webapp/lib/css/estilo.css
@@ -45,5 +45,12 @@
 .color-red{
 	color : #CD5C5C;
 }
-
-
+.erro-senha{
+	display : none;
+}
+.submit-sucess{
+	display:none;	
+}
+.balao-news{
+	width : 50%;
+}
