--- a/src/main/webapp/views/principal.html
+++ b/src/main/webapp/views/principal.html
@@ -112,7 +112,7 @@
                     <div class="overflow-hidden">
                         <img class="img-responsive img-responsive" src="{{evento.foto}}" alt="">
                     </div>
-                    <a ng-click="carregarEvento(evento)" class="btn-more hover-effect" href="#/home/evento">Saiba mais</a>
+                    <a ng-click="carregarEventoUnico(evento)" class="btn-more hover-effect" href="#/home/evento">Saiba mais</a>
                 </div>
                 <div class="caption">
                     <h3><a class="hover-effect" href="#">{{evento.titulo}}</a></h3>
@@ -164,7 +164,9 @@
                 </div>
             </div>
         </div>-->
+        
     </div>
+    
 
     <div class="row col-md-12 headline">
         <h2>Modalidades Esportivas</h2>
