--- a/src/main/webapp/views/evento.html
+++ b/src/main/webapp/views/evento.html
@@ -37,7 +37,7 @@
             </a>
 
 
-            <a href="#/home/cadastro-esporte">
+            <a href="#/home/cadastro-esporte" ng-click="carregarEventoEdit(eventos)">
                 <i class="col-md-3 fa fa-pencil-square-o fa-3x" aria-hidden="true"></i>
             </a>
         </div>
