--- a/src/main/webapp/views/eventos.html
+++ b/src/main/webapp/views/eventos.html
@@ -38,7 +38,7 @@
             </a>
 
 
-            <a href="#/home/cadastro-esporte">
+            <a href="#/home/cadastro-esporte" ng-click="carregarEventoEdit(evento)">
                 <i class="col-md-3 fa fa-pencil-square-o fa-3x" aria-hidden="true"></i>
             </a>
         </div>
