--- a/src/main/webapp/views/principal.html
+++ b/src/main/webapp/views/principal.html
@@ -110,7 +110,7 @@
             <div class="thumbnails thumbnail-style thumbnail-kenburn">
                 <div class="thumbnail-img">
                     <div class="overflow-hidden">
-                        <img class="img-responsive img-responsive" src="{{evento.foto}}" alt="">
+                        <img class="img-responsive img-responsive" src="{{evento.foto}}"  alt="">
                     </div>
                     <a ng-click="carregarEventoUnico(evento)" class="btn-more hover-effect" href="#/home/evento">Saiba mais</a>
                 </div>
@@ -175,7 +175,7 @@
     <div class="categoria-background row col-md-12">
         <div class="col-md-3">
             <div class="service">
-                <a href="#futebol">
+                <a href="#/home/futebol">
                     <div class="desc">
                         <h5>Futebol</h5>
                         <img class="img-responsive img-categoria" src="lib/img/bola.png" />
@@ -186,7 +186,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#volei">
+                    <a href="#/home/volei">
                         <h5>Vôlei</h5>
                         <img class="img-responsive img-categoria" src="lib/img/volei.png" />
                     </a>
@@ -196,7 +196,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#basquete">
+                    <a href="#/home/basquete">
                         <h5>Basquetebol</h5>
                         <img class="img-responsive img-categoria" src="lib/img/basquete.png" />
                     </a>
@@ -206,7 +206,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#natacao">
+                    <a href="#/home/natacao">
                         <h5>Natação</h5>
                         <img class="img-responsive img-categoria" src="lib/img/natacao.png" />
                     </a>
@@ -218,7 +218,7 @@
     <div class="categoria-background row margin-bottom-30 col-md-12">
         <div class="col-md-3">
             <div class="service">
-                <a href="#tenis">
+                <a href="#/home/tenis">
                     <div class="desc">
                         <h5>Tênis</h5>
                         <img class="img-responsive img-categoria" src="lib/img/tenis.png" />
@@ -229,7 +229,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#atletismo" />
+                    <a href="#/home/atletismo" />
                     <h5>Atletismo</h5>
                     <img class="img-responsive img-categoria" src="lib/img/corrida.png" />
                     </a>
@@ -239,7 +239,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#skate">
+                    <a href="#/home/skate">
                         <h5>Skate</h5>
                         <img class="img-responsive img-categoria" src="lib/img/skate.png" />
                     </a>
@@ -249,7 +249,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#airsoft">
+                    <a href="#/home/airsoft">
                         <h5>Airsoft</h5>
                         <img class="img-responsive img-categoria" src="lib/img/airsoft.png" />
                     </a>
