--- a/src/main/webapp/views/evento.html
+++ b/src/main/webapp/views/evento.html
@@ -22,8 +22,7 @@
             <img class="img-responsive" src="{{eventos.foto}}" alt="">
             <figcaption></figcaption>
         </figure>
-        <p ng-bind="eventos.descricao"></p>
-        <div class="text-left">
+        <div>
             <p>Endereço: {{eventos.endereco}}</p>
             <p>Data: {{eventos.data}}</p>
             <p>Categoria: {{eventos.categoria}}</p>
