--- a/src/main/webapp/views/principal.html
+++ b/src/main/webapp/views/principal.html
@@ -19,10 +19,7 @@
             <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
             <div class="da-img"><img src="assets/plugins/parallax-slider/img/html5andcss3.png" alt="image01" /></div>
         </div>
-        <div class="da-arrows">
-            <span class="da-arrows-prev"></span>
-            <span class="da-arrows-next"></span>
-        </div>
+        
     </div>
 </div>
 
@@ -175,7 +172,7 @@
     <div class="categoria-background row col-md-12">
         <div class="col-md-3">
             <div class="service">
-                <a href="#/home/futebol">
+                <a href="#/home/Futebol">
                     <div class="desc">
                         <h5>Futebol</h5>
                         <img class="img-responsive img-categoria" src="lib/img/bola.png" />
@@ -186,7 +183,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#/home/volei">
+                    <a href="#/home/Voleibol">
                         <h5>Vôlei</h5>
                         <img class="img-responsive img-categoria" src="lib/img/volei.png" />
                     </a>
@@ -196,7 +193,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#/home/basquete">
+                    <a href="#/home/Basquetebol">
                         <h5>Basquetebol</h5>
                         <img class="img-responsive img-categoria" src="lib/img/basquete.png" />
                     </a>
@@ -206,7 +203,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#/home/natacao">
+                    <a href="#/home/Natação">
                         <h5>Natação</h5>
                         <img class="img-responsive img-categoria" src="lib/img/natacao.png" />
                     </a>
@@ -218,7 +215,7 @@
     <div class="categoria-background row margin-bottom-30 col-md-12">
         <div class="col-md-3">
             <div class="service">
-                <a href="#/home/tenis">
+                <a href="#/home/Tênis">
                     <div class="desc">
                         <h5>Tênis</h5>
                         <img class="img-responsive img-categoria" src="lib/img/tenis.png" />
@@ -229,7 +226,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#/home/atletismo" />
+                    <a href="#/home/Atletismo" />
                     <h5>Atletismo</h5>
                     <img class="img-responsive img-categoria" src="lib/img/corrida.png" />
                     </a>
@@ -239,7 +236,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#/home/skate">
+                    <a href="#/home/Skate">
                         <h5>Skate</h5>
                         <img class="img-responsive img-categoria" src="lib/img/skate.png" />
                     </a>
@@ -249,7 +246,7 @@
         <div class="col-md-3">
             <div class="service">
                 <div class="desc">
-                    <a href="#/home/airsoft">
+                    <a href="#/home/Airsoft">
                         <h5>Airsoft</h5>
                         <img class="img-responsive img-categoria" src="lib/img/airsoft.png" />
                     </a>
@@ -262,47 +259,32 @@
         <h2>Nossos parceiros</h2>
     </div>
     <div class="owl-clients-v1">
-        <div class="item">
+        <div class="item col-md-2">
             <a href="http://adidas.com.br">
                 <img src="lib/img/parceiros/adidas.jpg" alt="">
             </a>
         </div>
-        <div class="item">
+        <div class="item col-md-2">
             <a href="http://apple.com.br">
                 <img src="lib/img/parceiros/aplle.png" alt="">
             </a>
         </div>
-        <div class="item">
-            <a href="http://www.bcb.gov.br">
-                <img src="lib/img/parceiros/bacen.jpg" alt="">
-            </a>
-        </div>
-        <div class="item">
-            <a href="http://bradesco.com.br">
-                <img src="lib/img/parceiros/bradesco.png" alt="">
-            </a>
-        </div>
-        <div class="item">
-            <a href="http://globo.com">
-                <img src="lib/img/parceiros/globo.png" alt="">
-            </a>
-        </div>
-        <div class="item">
+        <div class="item col-md-2">
             <a href="http://pcsist.com.br/">
                 <img src="lib/img/parceiros/pcsistema.jpg" alt="">
             </a>
         </div>
-        <div class="item">
+        <div class="item col-md-2">
             <a href="https://www.ibm.com.br">
                 <img src="lib/img/parceiros/ibm.png" alt="">
             </a>
         </div>
-        <div class="item">
+        <div class="item col-md-2">
             <a href="http://intel.com.br">
                 <img src="lib/img/parceiros/intel.png" alt="">
             </a>
         </div>
-        <div class="item">
+        <div class="item col-md-2">
             <a href="http://nike.com.br"><img src="lib/img/parceiros/nike.png" alt=""></a>
         </div>
     </div>
